--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Seu Nome. Todos os direitos reservados.</p>
+        <p>&copy; 2024. Todos os direitos reservados.</p>
     </footer>
     <script src="scripts.js"></script>
 </body>
