--- a/index.html
+++ b/index.html
@@ -9,73 +9,57 @@
 </head>
 <body>
     <header>
-        <h1>Taj Mahal</h1>
+        <h1 id="title">Taj Mahal</h1>
         <nav>
             <ul>
-                <li><a href="#historia">História</a></li>
-                <li><a href="#arquitetura">Arquitetura</a></li>
-                <li><a href="#significado">Significado Cultural</a></li>
-                <li><a href="#curiosidades">Curiosidades</a></li>
-                <li><a href="#galeria">Galeria</a></li>
-                <li><a href="#musica">Música</a></li>
+                <li><a href="#historia" id="historia-link">História</a></li>
+                <li><a href="#arquitetura" id="arquitetura-link">Arquitetura</a></li>
+                <li><a href="#significado" id="significado-link">Significado Cultural</a></li>
+                <li><a href="#curiosidades" id="curiosidades-link">Curiosidades</a></li>
+                <li><a href="#galeria" id="galeria-link">Galeria</a></li>
+                <li><a href="#musica" id="musica-link">Música</a></li>
             </ul>
         </nav>
+        <button id="translate-btn">Translate to English</button>
     </header>
 
     <section id="historia">
-        <h2>História</h2>
-        <p>
-            O Taj Mahal foi construído pelo imperador Mughal Shah Jahan em memória de sua amada esposa Mumtaz Mahal, que faleceu durante o parto de seu 14º filho em 1631. Devastado pela perda, Shah Jahan decidiu construir um mausoléu que fosse tão belo quanto seu amor por Mumtaz. A construção começou em 1632 e foi concluída em 1653, empregando mais de 20.000 trabalhadores e artesãos de toda a Índia, Pérsia, Império Otomano e Europa.
-        </p>
-        <p>
-            O projeto foi liderado pelo arquiteto principal, Ustad Ahmad Lahauri. O Taj Mahal não só serviu como um monumento ao amor eterno, mas também como um símbolo do poder e riqueza do Império Mughal. A história do Taj Mahal é uma combinação de romance e trágica perda, tornando-o um dos monumentos mais célebres e visitados do mundo.
-        </p>
+        <h2 id="historia-title">História</h2>
+        <p id="historia-text">O Taj Mahal foi construído pelo imperador Mughal Shah Jahan em memória de sua amada esposa Mumtaz Mahal...</p>
     </section>
 
     <section id="arquitetura">
-        <h2>Arquitetura</h2>
-        <p>
-            A arquitetura do Taj Mahal é uma fusão impressionante de estilos islâmico, persa, otomano e indiano. Feito inteiramente de mármore branco de Makrana, no Rajastão, o edifício é adornado com incrustações de pedras preciosas e semipreciosas, como jade, cristal, lápis-lazúli, ametista e turquesa, que formam intrincados padrões florais e caligráficos.
-        </p>
-        <p>
-            A cúpula central em forma de cebola, com 35 metros de altura, é cercada por quatro minaretes esguios, cada um inclinado ligeiramente para fora para evitar que caiam sobre o mausoléu em caso de terremoto. O complexo inclui uma mesquita e uma casa de hóspedes, e está situado em meio a extensos jardins projetados no estilo charbagh (um jardim persa dividido em quatro partes), representando o paraíso islâmico.
-        </p>
-        <p>
-            O Taj Mahal é conhecido por suas proporções simétricas perfeitas e pela beleza de seus detalhes arquitetônicos. A harmonia e o equilíbrio do design, juntamente com a pureza do mármore branco, conferem ao Taj Mahal uma qualidade de intemporalidade e serenidade.
-        </p>
+        <h2 id="arquitetura-title">Arquitetura</h2>
+        <p id="arquitetura-text">A arquitetura do Taj Mahal combina elementos de estilos islâmico, persa, otomano e indiano...</p>
     </section>
 
     <section id="significado">
-        <h2>Significado Cultural</h2>
-        <p>
-            O Taj Mahal é amplamente considerado um dos maiores exemplos de realização arquitetônica na história da humanidade. Mais do que apenas um monumento funerário, o Taj Mahal é um símbolo do amor eterno e da devoção de Shah Jahan por Mumtaz Mahal. Representa também o apogeu da arte e arquitetura Mughal, que alcançou novas alturas de sofisticação e beleza durante o reinado de Shah Jahan.
-        </p>
-        <p>
-            Além de sua importância histórica e arquitetônica, o Taj Mahal é um ícone cultural global, atraindo milhões de visitantes de todo o mundo todos os anos. Foi designado Patrimônio Mundial da UNESCO em 1983 e é frequentemente listado entre as Novas Sete Maravilhas do Mundo. Sua imagem é sinônimo de romance, beleza e grandiosidade, fazendo do Taj Mahal um dos destinos turísticos mais reconhecidos e celebrados do planeta.
-        </p>
+        <h2 id="significado-title">Significado Cultural</h2>
+        <p id="significado-text">O Taj Mahal é um símbolo do amor eterno e uma obra-prima da arquitetura mundial...</p>
     </section>
 
     <section id="curiosidades">
-        <h2>Curiosidades</h2>
-        <p>Curiosidade 1: A construção do Taj Mahal começou em 1632 e foi concluída em 1653.</p>
-        <p>Curiosidade 2: O mármore branco usado na construção veio de Makrana, no Rajastão.</p>
-        <p>Curiosidade 3: Mais de 20.000 artesãos trabalharam na construção do Taj Mahal.</p>
-        <p>Curiosidade 4: O Taj Mahal muda de cor dependendo da hora do dia, variando do rosa suave ao branco brilhante.</p>
-        <p>Curiosidade 5: Há uma lenda que diz que Shah Jahan planejava construir uma réplica do Taj Mahal em mármore preto do outro lado do rio Yamuna, mas ele foi deposto por seu filho Aurangzeb antes que o projeto pudesse ser realizado.</p>
-        <p>Curiosidade 6: O complexo do Taj Mahal inclui uma mesquita e uma casa de hóspedes, além dos jardins. A mesquita ainda está em uso e é fechada às sextas-feiras para orações.</p>
+        <h2 id="curiosidades-title">Curiosidades</h2>
+        <p id="curiosidade1">Curiosidade 1: A construção do Taj Mahal começou em 1632 e foi concluída em 1653.</p>
+        <p id="curiosidade2">Curiosidade 2: O mármore branco usado na construção veio de Makrana, no Rajastão.</p>
+        <p id="curiosidade3">Curiosidade 3: Mais de 20.000 artesãos trabalharam na construção do Taj Mahal.</p>
+        <p id="curiosidade4">Curiosidade 4: O Taj Mahal muda de cor dependendo da hora do dia, variando do rosa suave ao branco brilhante.</p>
+        <p id="curiosidade5">Curiosidade 5: Há uma lenda que diz que Shah Jahan planejava construir uma réplica do Taj Mahal em mármore preto do outro lado do rio Yamuna...</p>
+        <p id="curiosidade6">Curiosidade 6: O complexo do Taj Mahal inclui uma mesquita e uma casa de hóspedes, além dos jardins...</p>
     </section>
 
     <section id="galeria">
-        <h2>Galeria</h2>
+        <h2 id="galeria-title">Galeria</h2>
         <img src="imagens/taj1.jpg" alt="Taj Mahal 1" width="300">
         <img src="imagens/taj2.jpg" alt="Taj Mahal 2" width="300">
         <img src="imagens/taj3.jpg" alt="Taj Mahal 3" width="300">
     </section>
 
     <section id="musica">
-        <h2>Música</h2>
+        <h2 id="musica-title">Música</h2>
         <video id="taj-mahal-video" width="640" height="360" controls>
             <source src="jorge-ben-jor-taj-mahal.mp4" type="video/mp4">
+            Seu navegador não suporta o elemento de vídeo.
         </video>
         <button id="play-pause-btn">Play/Pause Música</button>
     </section>
